--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,7 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  padding: 0px;
+  padding: 0px!important;
   margin: 0px!important;
 }
 
