--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body {
   overflow-x: hidden;
   padding: 0px!important;
   margin: 0px!important;
-  background-color: #eff5fc;
+  background-color: #eff5fc!important;
 }
 
 select {
